--- a/src/Makefile
+++ b/src/Makefile
@@ -12,12 +12,13 @@ CFLAGS    ?= -std=gnu99 -Wall -O2
 LDFLAGS   ?= -pthread
 RES       ?= res.bin
 
+BIGFILE_SUPPORT = -D_FILE_OFFSET_BITS=64
 EEPROM_SUPPORT = yes
 
 SRCS = flashcmd_api.c spi_controller.c spi_nand_flash.c spi_nor_flash.c ch341a_spi.c timer.c main.c
 
 ifdef LIBS_BASE
-CFLAGS += -I$(LIBS_BASE)/include
+CFLAGS += -I$(LIBS_BASE)/include $(BIGFILE_SUPPORT)
 LDFLAGS += -L$(LIBS_BASE)/lib -Wl,-rpath -Wl,$(LIBS_BASE)/lib
 endif
 
@@ -36,6 +37,11 @@ SRCS += $(RES)
 CFLAGS += -posix
 CFLAGS += -Dffs=__builtin_ffs
 CFLAGS += -D__USE_MINGW_ANSI_STDIO=1
+endif
+
+ifeq ($(TARGET_OS), Darwin)
+CFLAGS += -Wno-gnu-designator
+LDFLAGS += -lobjc -Wl,-framework,IOKit -Wl,-framework,CoreFoundation -Wl,-framework,Security
 endif
 
 $(PKG): $(TARGET)$(EXEC_SUFFIX)
