--- a/src/debian/rules
+++ b/src/debian/rules
@@ -1,5 +1,8 @@
 #!/usr/bin/make -f
 
+export DEB_CFLAGS_SET = -std=gnu99 -Wall -O2 -D_FILE_OFFSET_BITS=64
+export DEB_LDFLAGS_SET = -pthread
+
 %:
 	dh $@
 
